{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 23,
  "lineage": "7cf15d72-30d6-9e6e-87dc-a2c2822d87dc",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:route-table/rtb-094082840ce0fdb6a",
            "default_route_table_id": "rtb-094082840ce0fdb6a",
            "id": "rtb-094082840ce0fdb6a",
            "owner_id": "923726674622",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ca754e3151b5e485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4027343a665f37e",
            "domain": "vpc",
            "id": "eipalloc-0d4027343a665f37e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-21-5-218.compute-1.amazonaws.com",
            "public_ip": "23.21.5.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:internet-gateway/igw-0dfe42d59c1f5f5a1",
            "id": "igw-0dfe42d59c1f5f5a1",
            "owner_id": "923726674622",
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "vpc_id": "vpc-0ca754e3151b5e485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4027343a665f37e",
            "connectivity_type": "public",
            "id": "nat-021c7b56685d90674",
            "network_interface_id": "eni-05301351247cbdcea",
            "private_ip": "10.0.101.43",
            "public_ip": "23.21.5.218",
            "subnet_id": "subnet-0f6265ade76384b61",
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02911bc4ea7e444bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-021c7b56685d90674",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02911bc4ea7e444bd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dfe42d59c1f5f5a1",
            "id": "r-rtb-0da7144a4c0086c511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da7144a4c0086c51",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:route-table/rtb-02911bc4ea7e444bd",
            "id": "rtb-02911bc4ea7e444bd",
            "owner_id": "923726674622",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca754e3151b5e485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:route-table/rtb-0da7144a4c0086c51",
            "id": "rtb-0da7144a4c0086c51",
            "owner_id": "923726674622",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca754e3151b5e485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1b6f3c037451142",
            "route_table_id": "rtb-02911bc4ea7e444bd",
            "subnet_id": "subnet-0a50e4efbc3db52ac"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03968fc95713e5ab9",
            "route_table_id": "rtb-02911bc4ea7e444bd",
            "subnet_id": "subnet-019a784babd5d0ddd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a265ca38926b94c",
            "route_table_id": "rtb-02911bc4ea7e444bd",
            "subnet_id": "subnet-04eb0cd45a5a55fd7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0783e798648179745",
            "route_table_id": "rtb-02911bc4ea7e444bd",
            "subnet_id": "subnet-0aa8ebd73d84a86c7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bc3dc5eb6d383ad",
            "route_table_id": "rtb-0da7144a4c0086c51",
            "subnet_id": "subnet-0f6265ade76384b61"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad8391df724ff302",
            "route_table_id": "rtb-0da7144a4c0086c51",
            "subnet_id": "subnet-0ce42b76e0a7abfe8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:subnet/subnet-0a50e4efbc3db52ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.201.0/24",
            "id": "subnet-0a50e4efbc3db52ac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923726674622",
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "vpc_id": "vpc-0ca754e3151b5e485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:subnet/subnet-019a784babd5d0ddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.202.0/24",
            "id": "subnet-019a784babd5d0ddd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923726674622",
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "vpc_id": "vpc-0ca754e3151b5e485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:subnet/subnet-04eb0cd45a5a55fd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04eb0cd45a5a55fd7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923726674622",
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "vpc_id": "vpc-0ca754e3151b5e485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:subnet/subnet-0aa8ebd73d84a86c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0aa8ebd73d84a86c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923726674622",
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "vpc_id": "vpc-0ca754e3151b5e485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:subnet/subnet-0f6265ade76384b61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0f6265ade76384b61",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "923726674622",
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "vpc_id": "vpc-0ca754e3151b5e485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:subnet/subnet-0ce42b76e0a7abfe8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0ce42b76e0a7abfe8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "923726674622",
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "vpc_id": "vpc-0ca754e3151b5e485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:vpc/vpc-0ca754e3151b5e485",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e1be88ae1bc31be",
            "default_route_table_id": "rtb-094082840ce0fdb6a",
            "default_security_group_id": "sg-064fdcedc0bb94cea",
            "dhcp_options_id": "dopt-01e5e3a2f15a8f702",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ca754e3151b5e485",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-094082840ce0fdb6a",
            "owner_id": "923726674622",
            "tags": {
              "Name": "Terraform module",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Terraform module",
              "env": "dev"
            }
          }
        }
      ]
    }
  ]
}